# CertifyTrack

./: .gitattributes  .gitignore  AGENTS.md  README.md  db.sqlite3  package-lock.json  requirements.txt  tailwind.config.js
AppName/: urls.py
BackEnd/: manage.py  pyproject.toml  requirements.txt
BackEnd/CertifyTrack/: asgi.py  settings.py  urls.py  wsgi.py
BackEnd/api/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
BackEnd/api/migrations/: 0001_initial.py  0002_auditlog_notification.py  0002_cluborganizer.py  0002_event_assigned_hall_event_hall_assigned_at_and_more.py  0002_user_verification_sent_at.py  0003_cluborganizer_club.py  0003_usernotificationpreferences_and_more.py  0004_mentor_signature_user_signature_alter_user_user_type.py  0005_principalsignature.py  0006_student_admission_type_and_more.py  0007_event_awardsaictepoints_event_needsvenuecampus.py  0008_aictepointtransaction_verification_code.py  0009_alter_aictepointtransaction_unique_together.py  0010_alter_user_user_type.py
Cert/: admin.py  apps.py  certificate_generator.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
CertifyTrack/: settings.py  urls.py  wsgi.py
FrontEnd/: index.html  package.json  pnpm-lock.yaml
ProjectName/: asgi.py  settings.py  urls.py
temp/: .~lock.participants.xlsx#  participants.xlsx
templates/: about.html  assign_event.html  assign_students.html  base.html  club_dashboard.html  contact.html  create_event.html  edit_profile.html  error.html  event_history.html  generate_certificates.html  landingpage.html  (+16 more)
(+32 files in other folders)
